# Cap

./: CROSS_PLATFORM_FIXES.md  Cargo.toml  LINUX_BUILD_FIXES.md  linux-build-fix.sh  pnpm-workspace.yaml  reco.txt
.github/workflows/: build-cross-platform.yml  build-linux-node.yml  publish-npm.yml
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: hotkeys.rs  lib.rs
apps/node/: .napi-build.yml  .npmignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile.cross-build  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_TESTING.md  README.md  build-cross-platform.sh  build-linux-docker.sh  build.rs  build.sh  cleanup.js  diagnose-window.js  examples.js  index.d.ts  index.js  package-lock.json  package.json  test-builds-local.sh  test-cancel.js  test-comparison.js  test-comprehensive.js  test-linux-build.sh  test-simple.js  test-specific.js  test-window.js  test.js  validate.js  window-recording-summary.js
apps/node/.cargo/: config.toml
apps/node/.github/workflows/: build.yml
apps/node/recordings/test-recording/: project-config.json
apps/node/scripts/: setup-deps.js  validate-env.js
apps/node/src/: lib.rs
apps/node/tests/: advanced.js  audio.js  basic.js  index.js
crates/audio/: Cargo.toml
crates/cursor-capture/: Cargo.toml
crates/cursor-capture/src/: position.rs
crates/displays/: Cargo.toml
crates/displays/src/platform/: linux.rs  mod.rs
crates/editor/: Cargo.toml
crates/media/: Cargo.toml
crates/media/src/: data.rs
crates/media/src/feeds/: audio.rs  audio_input.rs
crates/media/src/platform/: linux.rs  mod.rs
crates/media/src/sources/: audio_input.rs  screen_capture.rs
crates/project/src/: meta.rs
crates/recording/src/: cursor.rs
