[package]
name = "cap-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "tokio_rt"] }
napi-derive = "2"
cap-recording = { path = "../../crates/recording" }
cap-media = { path = "../../crates/media" }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scap = { workspace = true }

# Override media crate to disable audio features on Linux
[target.'cfg(target_os = "linux")'.dependencies]
cap-media = { path = "../../crates/media", default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]  
cap-media = { path = "../../crates/media" }  # Full features on other platforms

[build-dependencies]
napi-build = "2"

# NOTE: [patch.crates-io] sections are ignored in workspace members
# Patches must be added to the workspace root Cargo.toml instead