[package]
name = "cap-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "tokio_rt"] }
napi-derive = "2"
cap-recording = { path = "../../crates/recording" }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Platform-specific dependencies to avoid Linux libspa issues
[target.'cfg(target_os = "linux")'.dependencies]
# Disable audio features on Linux to avoid libspa version conflicts
cap-media = { path = "../../crates/media", default-features = false }
scap = { workspace = true, default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]  
# Full features on macOS and Windows (they don't use libspa)
cap-media = { path = "../../crates/media" }
scap = { workspace = true }

[build-dependencies]
napi-build = "2"

# NOTE: Linux builds will have limited/no audio support to avoid libspa version conflicts
# For full audio support, use macOS or Windows builds