[package]
name = "cap-audio"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio"]
audio = ["cpal"]

[dependencies]
ffmpeg = { workspace = true }
cpal = { workspace = true, optional = true }
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }
