[package]
name = "cap-editor"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
cap-media = { path = "../media" }
cap-project = { path = "../project" }
cap-rendering = { path = "../rendering" }
# cap-audio dependency made conditional below to avoid cpal on Linux

tokio = { workspace = true, features = ["macros", "process", "fs"] }
# Remove cpal from general dependencies - make it conditional below
axum = { version = "0.7.5", features = ["ws"] }
ffmpeg.workspace = true
specta.workspace = true
serde = { version = "1", features = ["derive"] }
sentry.workspace = true
futures = "0.3.31"
tracing.workspace = true
flume.workspace = true

# Add conditional compilation for audio
[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal.workspace = true
# Enable full audio features on non-Linux platforms
cap-audio = { path = "../audio" }

[target.'cfg(target_os = "linux")'.dependencies]
# On Linux, omit cpal entirely to avoid pipewire/libspa issues
# Use cap-audio without audio features (no cpal dependency)
cap-audio = { path = "../audio", default-features = false }
