[package]
name = "cap-media"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["audio", "video"]
audio = ["dep:cpal", "dep:ringbuf"]
video = []
# Linux-specific feature to completely exclude audio
linux-no-audio = ["video"]

[dependencies]
cap-project = { path = "../project" }
cap-flags = { path = "../flags" }
cap-utils = { path = "../utils" }
cap-displays = { path = "../displays" }
cap-cursor-capture = { path = "../cursor-capture" }
cap-audio = { path = "../audio" }
cap-gpu-converters = { path = "../gpu-converters" }

specta.workspace = true
tokio.workspace = true
flume.workspace = true
thiserror.workspace = true
ffmpeg = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.12.0"
tracing.workspace = true
futures = "0.3.31"
indexmap = "2.10.0"
num-traits = "0.2.19"
axum = "0.7.9"
image = "0.25.2"
mp4 = "0.14.0"

# Audio dependencies (only included when audio feature is enabled)
cpal = { workspace = true, optional = true }
ringbuf = { version = "0.4.8", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3.5"
cocoa = "0.26.0"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc2-foundation = "0.2.2"
core-foundation = "0.10.0"
core-graphics = "0.24.0"
cidre = { workspace = true }
nokhwa = { workspace = true }
nokhwa-bindings-macos = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
] }
windows-capture = { workspace = true }
nokhwa = { workspace = true }

# Linux dependencies - conditional on features
[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { workspace = true, features = ["input-v4l"] }

# Note: scap is handled at the workspace level with feature control